# symphonia-decoder

./: .gitattributes  Cargo.toml  browser.js  index.d.ts  index.js  package.json  toddy-decoder.wasi-browser.js  toddy-decoder.wasi.cjs
.github/workflows/: CI.yml
__test__/: index.spec.ts
src/: lib.rs
