
[package]
authors = ["ToddyTheNoobDud"]
edition = "2024"
name = "toddy_decoder"
version = "2.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = "3.9.0"
napi-derive = "3.5.6"
symphonia = { version = "0.6.0", features = ["all"] }
rubato = "2.0.0"

[build-dependencies]
napi-build = "2.3.2"

[profile.release]
lto = true
strip = "symbols"
